[gd_scene load_steps=19 format=3 uid="uid://okmrywtn40ld"]

[ext_resource type="Script" uid="uid://dtk1oas6y7lbo" path="res://Player/player.gd" id="1_4ntmi"]
[ext_resource type="Texture2D" uid="uid://cx5752bo22o82" path="res://Player/angre(idle).png" id="2_4ntmi"]
[ext_resource type="PackedScene" uid="uid://cubvmosq7q1tg" path="res://Player/sword.tscn" id="3_btcbx"]
[ext_resource type="PackedScene" uid="uid://cyuy8pt16hn1n" path="res://texts/canvas_layer.tscn" id="4_gwnis"]

[sub_resource type="VisualShaderNodeColorParameter" id="VisualShaderNodeColorParameter_gwnis"]
output_port_for_preview = 0
parameter_name = "tint"
default_value_enabled = true

[sub_resource type="VisualShaderNodeBooleanParameter" id="VisualShaderNodeBooleanParameter_k53q1"]
parameter_name = "enebled"
default_value_enabled = true

[sub_resource type="VisualShaderNodeIf" id="VisualShaderNodeIf_fhl08"]
default_input_values = [0, 0.0, 1, 1.0, 2, 1e-05, 3, Vector3(0, 0, 0), 4, Vector3(0, 0, 0), 5, Vector3(0, 0, 0)]

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_vtle1"]
input_name = "color"

[sub_resource type="VisualShader" id="VisualShader_od3ui"]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform bool enebled = false;
uniform vec4 tint : source_color = vec4(1.000000, 1.000000, 1.000000, 1.000000);



void fragment() {
// BooleanParameter:3
	bool n_out3p0 = enebled;


// ColorParameter:2
	vec4 n_out2p0 = tint;


// Input:5
	vec4 n_out5p0 = COLOR;


	vec3 n_out4p0;
// If:4
	float n_in4p1 = 1.00000;
	float n_in4p2 = 0.00001;
	if(abs((n_out3p0 ? 1.0 : 0.0) - n_in4p1) < n_in4p2)
	{
		n_out4p0 = vec3(n_out2p0.xyz);
	}
	else if((n_out3p0 ? 1.0 : 0.0) < n_in4p1)
	{
		n_out4p0 = vec3(n_out5p0.xyz);
	}
	else
	{
		n_out4p0 = vec3(n_out5p0.xyz);
	}


// Output:0
	COLOR.rgb = n_out4p0;


}
"
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2(540, 160)
nodes/fragment/2/node = SubResource("VisualShaderNodeColorParameter_gwnis")
nodes/fragment/2/position = Vector2(100, 160)
nodes/fragment/3/node = SubResource("VisualShaderNodeBooleanParameter_k53q1")
nodes/fragment/3/position = Vector2(160, 520)
nodes/fragment/4/node = SubResource("VisualShaderNodeIf_fhl08")
nodes/fragment/4/position = Vector2(400, 300)
nodes/fragment/5/node = SubResource("VisualShaderNodeInput_vtle1")
nodes/fragment/5/position = Vector2(40, 460)
nodes/fragment/connections = PackedInt32Array(3, 0, 4, 0, 2, 0, 4, 3, 4, 0, 0, 0, 5, 0, 4, 4, 5, 0, 4, 5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_00tjw"]
shader = SubResource("VisualShader_od3ui")
shader_parameter/enebled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_btcbx"]
atlas = ExtResource("2_4ntmi")
region = Rect2(0, 0, 602, 625)

[sub_resource type="SpriteFrames" id="SpriteFrames_gwnis"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btcbx")
}],
"loop": true,
"name": &"IDLE",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_4ntmi"]
resource_name = "ExtensionForIdle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_btcbx"]
_data = {
&"ExtensionForIdle": SubResource("Animation_4ntmi")
}

[sub_resource type="Animation" id="Animation_x3vf3"]
resource_name = "hit-flash"
length = 0.2

[sub_resource type="AnimationLibrary" id="AnimationLibrary_apopc"]
_data = {
&"hit-flash": SubResource("Animation_x3vf3")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ntmi"]
radius = 18.0
height = 44.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gwnis"]
radius = 30.1357

[node name="Player" type="CharacterBody2D" groups=["PlayerGroup"]]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_4ntmi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_00tjw")
scale = Vector2(0.0872924, 0.0866)
sprite_frames = SubResource("SpriteFrames_gwnis")
animation = &"IDLE"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_btcbx")
}

[node name="flash animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_apopc")
}

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(18, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4ntmi")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.2, 1.2)

[node name="Sword scene" parent="." instance=ExtResource("3_btcbx")]
position = Vector2(0, 13)

[node name="CanvasLayer" parent="." instance=ExtResource("4_gwnis")]

[node name="stabilizing the machine" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="stabilizing the machine"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 272.0
offset_top = 153.0
offset_right = -252.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="stabilizing the machine/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -28.5
offset_right = 145.5
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "1 Crystal = +1%"

[node name="Label2" type="Label" parent="stabilizing the machine/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 108.0
offset_right = 272.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Press esc to close"

[node name="Button" type="Button" parent="stabilizing the machine/Panel"]
layout_mode = 0
offset_left = 43.0
offset_top = 302.0
offset_right = 212.0
offset_bottom = 376.0
theme_override_font_sizes/font_size = 40
disabled = true
text = "Stabilize"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_gwnis")
debug_color = Color(0.408348, 0.601729, 0.230341, 0.42)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
